[package]
name = "nyaan"
version = "0.1.0"
authors = ["Neccolini <shun11202991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0"}
rand = "0.8.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "llvmir"
path = "src/llvmir.rs"